--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<div class="container">
 			<div class="qrcode">
-				<img src="/src/images/image-qr-code.png" alt="" class="qrcode__img" />
+				<img src="./src/images/image-qr-code.png" alt="" class="qrcode__img" />
 				<div class="qrcode__text">
 					<h1>Improve your front-end skills by building projects</h1>
 					<p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
